--- a/login.html
+++ b/login.html
@@ -3,9 +3,8 @@
 <!--[if IE 9]> <html lang="en" class="ie9"> <![endif]-->  
 <!--[if !IE]><!--> <html lang="en"> <!--<![endif]-->  
 
-<!-- Cloned by RabinsXP.com-->
 <head>
-    <title>Login 1 | Unify - Rabins XP Responsive Website Template</title>
+    <title>Swacchta</title>
 
     <!-- Meta -->
     <meta charset="utf-8">
@@ -40,6 +39,7 @@
 </head> 
 
 <body class="demo-lightbox-gallery dark">   
+    
     <!--=== Header ===-->
     <nav class="one-page-header navbar navbar-default navbar-fixed-top" role="navigation">
         <div class="container">
@@ -65,7 +65,7 @@
                             <a href="#body">Home</a>
                         </li>
                         <li class="page-scroll">
-                            <a href="#events">Events</a>
+                            <a href="events.html">Events</a>
                         </li>
                         <li class="page-scroll">
                             <a href="#donate">Donate</a>
@@ -88,6 +88,7 @@
     </nav>
     <!--=== End Header ===-->
 
+
 <!--=== Content Part ===-->    
 <div class="container">
     <!--Reg Block-->
@@ -109,7 +110,7 @@
         </div>
         <div class="input-group margin-bottom-20">
             <span class="input-group-addon"><i class="fa fa-lock"></i></span>
-            <input type="text" class="form-control" placeholder="Password">
+            <input type="Password" class="form-control" placeholder="Password">
         </div>
         <hr>
 
@@ -129,80 +130,6 @@
     <!--End Reg Block-->
 </div><!--/container-->
 <!--=== End Content Part ===-->
-
-    <!-- Contact Section -->
-    <section id="contact" class="contacts-section" style="background-color:black;">
-        <div class="container content-lg">
-            <div class="title-v1">
-                <h2>Contact Us</h2>
-                <p>Contact us for more information</p>
-            </div>
-
-            <div class="row contacts-in">
-                <div class="col-md-6 md-margin-bottom-400>
-                    <ul class="list-unstyled">
-                        <li><i class="fa fa-home"></i> 5B Streat, City 50987 New Town US</li>
-                        <li><i class="fa fa-phone"></i> +91-7835932160</li>
-                        <li><i class="fa fa-envelope"></i> <a href="info%40example.html">shaury29.baranwal@gmail.com</a></li>
-                        <li><i class="fa fa-globe"></i> <a href="http://htmlstream.com/">www.htmlstream.com</a></li>
-                    </ul>
-                </div>
-
-                <div class="col-md-6">
-                    <form action="http://htmlstream.com/preview/unify-v1.9/One-Page/assets/php/sky-forms-pro/demo-contacts-process.php" method="post" id="sky-form3" class="sky-form contact-style">
-                        <fieldset>
-                            <label>Name</label>
-                            <div class="row">
-                                <div class="col-md-7 margin-bottom-20 col-md-offset-0">
-                                    <div>
-                                        <input type="text" name="name" id="name" class="form-control">
-                                    </div>
-                                </div>
-                            </div>
-
-                            <label>Email <span class="color-red">*</span></label>
-                            <div class="row">
-                                <div class="col-md-7 margin-bottom-20 col-md-offset-0">
-                                    <div>
-                                        <input type="text" name="email" id="email" class="form-control">
-                                    </div>
-                                </div>
-                            </div>
-
-                            <label>Message</label>
-                            <div class="row">
-                                <div class="col-md-11 margin-bottom-20 col-md-offset-0">
-                                    <div>
-                                        <textarea rows="8" name="message" id="message" class="form-control"></textarea>
-                                    </div>
-                                </div>
-                            </div>
-
-                            <p><button type="submit" class="btn-u btn-brd btn-brd-hover btn-u-dark">Send Message</button></p>
-                        </fieldset>
-
-                        <div class="message">
-                            <i class="rounded-x fa fa-check"></i>
-                            <p>Your message was successfully sent!</p>
-                        </div>
-                    </form>
-                </div>
-            </div>
-        </div>
-
-        <div class="copyright-section">
-            <p>2014 &copy; All Rights Reserved by <a target="_blank" href="https://twitter.com/htmlstream">Htmlstream</a></p>
-            <ul class="social-icons">
-                <li><a href="#" data-original-title="Facebook" class="social_facebook rounded-x"></a></li>
-                <li><a href="#" data-original-title="Twitter" class="social_twitter rounded-x"></a></li>
-                <li><a href="#" data-original-title="Goole Plus" class="social_googleplus rounded-x"></a></li>
-                <li><a href="#" data-original-title="Pinterest" class="social_pintrest rounded-x"></a></li>
-                <li><a href="#" data-original-title="Linkedin" class="social_linkedin rounded-x"></a></li>
-            </ul>
-            <span class="page-scroll"><a href="#intro"><i class="fa fa-angle-double-up back-to-top"></i></a></span>
-        </div>
-    </section>
-    <!-- End Contact Section -->
 
 <!-- JS Global Compulsory -->           
 <script type="text/javascript" src="assets/logincss/plugins/jquery/jquery.min.js"></script>
