--- a/events.html
+++ b/events.html
@@ -3,9 +3,8 @@
 <!--[if IE 9]> <html lang="en" class="ie9"> <![endif]-->
 <!--[if !IE]><!--> <html lang="en"> <!--<![endif]-->
 
-<!-- Cloned by RabinsXP.com-->
 <head>
-	<title>Events</title>
+	<title>swacchta</title>
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.99.0/css/materialize.min.css">
 	<!-- Meta -->
 	<meta charset="utf-8">
@@ -55,57 +54,53 @@ The data-spy and data-target are part of the built-in Bootstrap scrollspy functi
 -->
 <body id="body" data-spy="scroll" data-target=".one-page-header" class="demo-lightbox-gallery dark">
   
-	<!--=== Header ===-->
-	<nav class="one-page-header navbar navbar-default navbar-fixed-top" role="navigation">
-		<div class="container">
-			<div class="menu-container page-scroll">
-				<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
-					<span class="sr-only">Toggle navigation</span>
-					<span class="icon-bar"></span>
-					<span class="icon-bar"></span>
-					<span class="icon-bar"></span>
-				</button>
+ <!--=== Header ===-->
+    <nav class="one-page-header navbar navbar-default navbar-fixed-top" role="navigation">
+        <div class="container">
+            <div class="menu-container page-scroll">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
 
-				<a class="navbar-brand" href="#intro">
-					<span>U</span>nify
-					<!-- <img src="assets/img/logo1.png" alt="Logo"> -->
-				</a>
-			</div>
+                <a class="navbar-brand" href="#intro">
+                    <span>S</span>wachhta
+                    <!-- <img src="assets/img/logo1.png" alt="Logo"> -->
+                </a>
+            </div>
 
-			<!-- Collect the nav links, forms, and other content for toggling -->
-			<div class="collapse navbar-collapse navbar-ex1-collapse">
-				<div class="menu-container">
-					<ul class="nav navbar-nav">
-						<li class="page-scroll home">
-							<a href="#body">Home</a>
-						</li>
-						<li class="page-scroll">
-							<a href="#about">About Us</a>
-						</li>
-						<li class="page-scroll">
-							<a href="#services">Services</a>
-						</li>
-						<li class="page-scroll">
-							<a href="#news">News</a>
-						</li>
-						<li class="page-scroll">
-							<a href="#portfolio">Portfolio</a>
-						</li>
-						<li class="page-scroll">
-							<a href="#contact">Contact</a>
-						</li>
-						<li class="page-scroll">
-							<a href="../index-2.html">Main</a>
-						</li>
-					</ul>
-				</div>
-			</div>
-			<!-- /.navbar-collapse -->
-		</div>
-		<!-- /.container -->
-	</nav>
-	<!--=== End Header ===-->
-
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse navbar-ex1-collapse">
+                <div class="menu-container">
+                    <ul class="nav navbar-nav">
+                        <li class="page-scroll home">
+                            <a href="#body">Home</a>
+                        </li>
+                        <li class="page-scroll">
+                            <a href="events.html">Events</a>
+                        </li>
+                        <li class="page-scroll">
+                            <a href="donation.html">Donate</a>
+                        </li>
+                        <li class="page-scroll">
+                            <a href="upload.html">Upload</a>
+                        </li>
+                        <li class="page-scroll">
+                            <a href="#">Contact</a>
+                        </li>
+                        <li class="page-scroll">
+                            <a href="#">Main</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            <!-- /.navbar-collapse -->
+        </div>
+        <!-- /.container -->
+    </nav>
+    <!--=== End Header ===-->
 	<!-- Intro Section -->
 	<section id="intro" class="intro-section">
 		<div class="fullscreenbanner-container">
