--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@ The data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                             <a href="events.html">Events</a>
                         </li>
                         <li class="page-scroll">
-                            <a href="#donate">Donate</a>
+                            <a href="donation.html">Donate</a>
                         </li>
                         <li class="page-scroll">
                             <a href="#upload">Upload</a>
@@ -263,6 +263,16 @@ The data-spy and data-target are part of the built-in Bootstrap scrollspy functi
         </div>
     </section>
     <!-- End Intro Section -->
+
+    <!-- Start Idea -->
+
+    <div class="title-v1" style="padding:10% 20%;">
+        <h1 class="h1">IDEA</h1>
+        <h4 class="h4" style="line-height: 30px;">It is an initiative to make the society clean and free from dirty pickets.It allows users to click pictures of garbage lots and inform others on the application (along with the location of the place).<strong style="color:orange;"> Admin </strong>(NGO persons) would confirm the dirty area and would create an <strong style="color:blue;">event</strong> and post it on the application. Volunteers will RSVP to join the event and contribute their services to clean the area. People who cannot directly participate can <strong style="color:red;">donate </strong>things for cleaning or donate money. People can also donate money through bitcoins.</h4>
+    </div>
+    <!-- End Idea -->
+
+
 
     <!--  About Section -->
     <section id="about" class="about-section section-first">
