--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@ The data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                 <div class="menu-container">
                     <ul class="nav navbar-nav">
                         <li class="page-scroll home">
-                            <a href="#body">Home</a>
+                            <a href="index.html">Home</a>
                         </li>
                         <li class="page-scroll">
                             <a href="events.html">Events</a>
@@ -85,13 +85,13 @@ The data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                             <a href="donation.html">Donate</a>
                         </li>
                         <li class="page-scroll">
-                            <a href="#upload">Upload</a>
+                            <a href="index.html#upload">Upload</a>
                         </li>
                         <li class="page-scroll">
-                            <a href="#contact">Contact</a>
+                            <a href="index.html#contact">Contact</a>
                         </li>
                         <li class="page-scroll">
-                            <a href="../index-2.html">Main</a>
+                            <a href="login.html">Log In</a>
                         </li>
                     </ul>
                 </div>
@@ -346,7 +346,7 @@ The data-spy and data-target are part of the built-in Bootstrap scrollspy functi
     <!--  About Section -->
 
     <!-- Upload Section -->
-    <section id="services">
+    <section id="upload">
         <div class="container content-lg">
             <div class="title-v1">
                 <h2>Upload Images of Garbage</h2>
