--- a/events.html
+++ b/events.html
@@ -54,7 +54,7 @@ The data-spy and data-target are part of the built-in Bootstrap scrollspy functi
 -->
 <body id="body" data-spy="scroll" data-target=".one-page-header" class="demo-lightbox-gallery dark">
   
- <!--=== Header ===-->
+    <!--=== Header ===-->
     <nav class="one-page-header navbar navbar-default navbar-fixed-top" role="navigation">
         <div class="container">
             <div class="menu-container page-scroll">
@@ -76,7 +76,7 @@ The data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                 <div class="menu-container">
                     <ul class="nav navbar-nav">
                         <li class="page-scroll home">
-                            <a href="#body">Home</a>
+                            <a href="index.html">Home</a>
                         </li>
                         <li class="page-scroll">
                             <a href="events.html">Events</a>
@@ -85,13 +85,13 @@ The data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                             <a href="donation.html">Donate</a>
                         </li>
                         <li class="page-scroll">
-                            <a href="upload.html">Upload</a>
+                            <a href="index.html#upload">Upload</a>
                         </li>
                         <li class="page-scroll">
-                            <a href="#">Contact</a>
+                            <a href="index.html#contact">Contact</a>
                         </li>
                         <li class="page-scroll">
-                            <a href="#">Main</a>
+                            <a href="login.html">Log In</a>
                         </li>
                     </ul>
                 </div>
