--- a/login.html
+++ b/login.html
@@ -39,7 +39,7 @@
 </head> 
 
 <body class="demo-lightbox-gallery dark">   
-    
+
     <!--=== Header ===-->
     <nav class="one-page-header navbar navbar-default navbar-fixed-top" role="navigation">
         <div class="container">
@@ -62,22 +62,22 @@
                 <div class="menu-container">
                     <ul class="nav navbar-nav">
                         <li class="page-scroll home">
-                            <a href="#body">Home</a>
+                            <a href="index.html">Home</a>
                         </li>
                         <li class="page-scroll">
                             <a href="events.html">Events</a>
                         </li>
                         <li class="page-scroll">
-                            <a href="#donate">Donate</a>
+                            <a href="donation.html">Donate</a>
                         </li>
                         <li class="page-scroll">
-                            <a href="#upload">Upload</a>
+                            <a href="index.html#upload">Upload</a>
                         </li>
                         <li class="page-scroll">
-                            <a href="#contact">Contact</a>
+                            <a href="index.html#contact">Contact</a>
                         </li>
                         <li class="page-scroll">
-                            <a href="../index-2.html">Main</a>
+                            <a href="login.html">Log In</a>
                         </li>
                     </ul>
                 </div>
@@ -87,7 +87,6 @@
         <!-- /.container -->
     </nav>
     <!--=== End Header ===-->
-
 
 <!--=== Content Part ===-->    
 <div class="container">
@@ -101,12 +100,12 @@
                 <li><a class="rounded-x social_googleplus" data-original-title="Google Plus" href="#"></a></li>
                 <li><a class="rounded-x social_linkedin" data-original-title="Linkedin" href="#"></a></li>
             </ul>
-            <p>Don't Have Account? Click <a class="color-green" href="page_registration1.html">Sign Up</a> to registration.</p>            
+            <p>Don't Have Account? Click <a class="color-green" href="registration.html">Sign Up</a> to registration.</p>            
         </div>
 
         <div class="input-group margin-bottom-20">
             <span class="input-group-addon"><i class="fa fa-envelope"></i></span>
-            <input type="text" class="form-control" placeholder="Email">
+            <input type="Email" class="form-control" placeholder="Email">
         </div>
         <div class="input-group margin-bottom-20">
             <span class="input-group-addon"><i class="fa fa-lock"></i></span>
