--- a/registration.html
+++ b/registration.html
@@ -87,12 +87,13 @@
     </nav>
     <!--=== End Header ===-->
 
+
 <!--=== Content Part ===-->    
 <div class="container">
     <!--Reg Block-->
     <div class="reg-block">
         <div class="reg-block-header">
-            <h2>Donate</h2>         
+            <h2>Sign Up</h2>         
         </div>
 
         <div class="input-group margin-bottom-20">
@@ -105,16 +106,20 @@
         </div>
         <div class="input-group margin-bottom-20">
             <span class="input-group-addon"><i class="fa fa-envelope"></i></span>
-            <input type="text" class="form-control" placeholder="Email">
+            <input type="Email" class="form-control" placeholder="Email">
         </div>
         <div class="input-group margin-bottom-20">
             <span class="input-group-addon"><i class="fa fa-lock"></i></span>
-            <input type="text" class="form-control" placeholder="Address">
+            <input type="password" class="form-control" placeholder="password">
+        </div>
+        <div class="input-group margin-bottom-20">
+            <span class="input-group-addon"><i class="fa fa-lock"></i></span>
+            <input type="password" class="form-control" placeholder="confirm password">
         </div>
         <hr>              
         <div class="row">
             <div class="col-md-10 col-md-offset-1">
-                <button type="submit" class="btn-u btn-block" data-toggle="modal" data-target="#myModal">Donate</button>
+                <button type="submit" class="btn-u btn-block">Sign Up</button>
             </div>
         </div>
     </div>
@@ -122,37 +127,6 @@
 </div><!--/container-->
 <!--=== End Content Part ===-->
 
-<!--=== Modal Class ===-->
-<div id="myModal" class="modal fade" role="dialog">
-    <div class="modal-dialog">
-
-    <!-- Modal content-->
-    <div class="modal-content">
-      <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal">&times;</button>
-        <h4 class="modal-title">How do you want to donate?</h4>
-      </div>
-      <div class="modal-body">
-         <div class="btn-group btn-group-justified">
-  <div class="btn-group">
-    <button type="button" class="btn btn-block">Donate Items</button>
-  </div>
-  <div class="btn-group">
-    <button type="button" class="btn btn-block">Donate via bitcoins</button>
-  </div>
-  <div class="btn-group">
-    <button type="button" class="btn btn-block">Donate via dc/cc</button>
-  </div>
-</div> 
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-      </div>
-    </div>
-
-  </div>
-</div>
-<!--=== End Modal Class ===-->
 
 <!-- JS Global Compulsory -->           
 <script type="text/javascript" src="assets/logincss/plugins/jquery/jquery.min.js"></script>
