--- a/index.html
+++ b/index.html
@@ -290,53 +290,51 @@ The data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                         <div class="team-img">
                             <img class="img-responsive" src="assets/img/team/img1-md.jpg" alt="">
                             <ul>
-                                <li><a href="#"><i class="icon-custom icon-sm rounded-x fa fa-twitter"></i></a></li>
-                                <li><a href="#"><i class="icon-custom icon-sm rounded-x fa fa-facebook"></i></a></li>
-                                <li><a href="#"><i class="icon-custom icon-sm rounded-x fa fa-google-plus"></i></a></li>
+                                <li><a href="#" target="_blank"><i class="icon-custom icon-sm rounded-x fa fa-twitter"></i></a></li>
+                                <li><a href="https://www.facebook.com/profile.php?id=100010896942870" target="_blank"><i class="icon-custom icon-sm rounded-x fa fa-facebook"></i></a></li>
+                                <li><a href="mailto:shaury29.baran wal@gmail.com" target="_blank"><i class="icon-custom icon-sm rounded-x fa fa-google-plus"></i></a></li>
                             </ul>
                         </div>
                         <h3>Shaury Baranwal</h3>
                         <h4>Web Developer</h4>
-                        <p>Highly skilled in HTML,CSS,JS, NodeJS </p>
-                    </li>
+                                           </li>
                     <li class="col-sm-3 col-xs-6 md-margin-bottom-30">
                         <div class="team-img">
                             <img class="img-responsive" src="assets/img/team/img2-md.jpg" alt="">
                             <ul>
-                                <li><a href="#"><i class="icon-custom icon-sm rounded-x fa fa-twitter"></i></a></li>
-                                <li><a href="#"><i class="icon-custom icon-sm rounded-x fa fa-facebook"></i></a></li>
-                                <li><a href="#"><i class="icon-custom icon-sm rounded-x fa fa-google-plus"></i></a></li>
+                                <li><a href="#" target="_blank"><i class="icon-custom icon-sm rounded-x fa fa-twitter"></i></a></li>
+                                <li><a href="https://www.facebook.com/gaurravrawal" target="_blank"><i class="icon-custom icon-sm rounded-x fa fa-facebook"></i></a></li>
+                                <li><a href="mailto:itsmegauravrawal@gmail.com" target="_blank"><i class="icon-custom icon-sm rounded-x fa fa-google-plus"></i></a></li>
                             </ul>
                         </div>
                         <h3>Gaurav Rawal</h3>
                         <h4>Lead Designer</h4>
-                        <p>Lead Designer </p>
-                    </li>
+                                      </li>
                     <li class="col-sm-3 col-xs-6">
                         <div class="team-img">
                             <img class="img-responsive" src="assets/img/team/img3-md.jpg" alt="">
                             <ul>
-                                <li><a href="#"><i class="icon-custom icon-sm rounded-x fa fa-twitter"></i></a></li>
-                                <li><a href="#"><i class="icon-custom icon-sm rounded-x fa fa-facebook"></i></a></li>
-                                <li><a href="#"><i class="icon-custom icon-sm rounded-x fa fa-google-plus"></i></a></li>
+                                <li><a href="#" target="_blank"><i class="icon-custom icon-sm rounded-x fa fa-twitter"></i></a></li>
+                                <li><a href="https://www.facebook.com/nikhilandsharma" target="_blank"><i class="icon-custom icon-sm rounded-x fa fa-facebook"></i></a></li>
+                                <li><a href="mailto:nikhil722sharma@gmail.com" target="_blank"><i class="icon-custom icon-sm rounded-x fa fa-google-plus"></i></a></li>
                             </ul>
                         </div>
                         <h3>Nikhil Sharma</h3>
-                        <h4>Creative Developer</h4>
-                        <p>Creative designer</p>
+                        <h4>Web Developer</h4>
+           
                     </li>
                     <li class="col-sm-3 col-xs-6">
                         <div class="team-img">
                             <img class="img-responsive" src="assets/img/team/img5-md.jpg" alt="">
                             <ul>
-                                <li><a href="#"><i class="icon-custom icon-sm rounded-x fa fa-twitter"></i></a></li>
-                                <li><a href="#"><i class="icon-custom icon-sm rounded-x fa fa-facebook"></i></a></li>
-                                <li><a href="#"><i class="icon-custom icon-sm rounded-x fa fa-google-plus"></i></a></li>
+                                <li><a href="#" target="_blank"><i class="icon-custom icon-sm rounded-x fa fa-twitter"></i></a></li>
+                                <li><a href="https://www.facebook.com/chhavnish?ref=br_rs" target="_blank"><i class="icon-custom icon-sm rounded-x fa fa-facebook"></i></a></li>
+                                <li><a href="mailto:chhavnish@gmail.com" target="_blank"><i class="icon-custom icon-sm rounded-x fa fa-google-plus"></i></a></li>
                             </ul>
                         </div>
                         <h3>Chhavnish</h3>
-                        <h4>Web developer</h4>
-                        <p>Web developer</p>
+                        <h4>Creative developer</h4>
+          
                     </li>
                 </ul>
             </div>
@@ -448,7 +446,7 @@ The data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                         <li><i class="fa fa-home"></i> 5B Streat, City 50987 New Town US</li>
                         <li><i class="fa fa-phone"></i> +91-7835932160</li>
                         <li><i class="fa fa-envelope"></i> <a href="info%40example.html">shaury29.baranwal@gmail.com</a></li>
-                        <li><i class="fa fa-globe"></i> <a href="http://htmlstream.com/">www.htmlstream.com</a></li>
+                        <li><i class="fa fa-globe"></i> <a href="index.html">www.swachhta.com</a></li>
                     </ul>
                 </div>
 
