--- a/registration.html
+++ b/registration.html
@@ -61,22 +61,22 @@
                 <div class="menu-container">
                     <ul class="nav navbar-nav">
                         <li class="page-scroll home">
-                            <a href="index.html">Home</a>
+                            <a href="index.php">Home</a>
                         </li>
                         <li class="page-scroll">
-                            <a href="events.html">Events</a>
+                            <a href="events.php">Events</a>
                         </li>
                         <li class="page-scroll">
-                            <a href="donation.html">Donate</a>
+                            <a href="donation.php">Donate</a>
                         </li>
                         <li class="page-scroll">
-                            <a href="index.html#upload">Upload</a>
+                            <a href="index.php#upload">Upload</a>
                         </li>
                         <li class="page-scroll">
-                            <a href="index.html#contact">Contact</a>
+                            <a href="index.php#contact">Contact</a>
                         </li>
                         <li class="page-scroll">
-                            <a href="login.html">Log In</a>
+                            <a href="login.php">Log In</a>
                         </li>
                     </ul>
                 </div>
@@ -95,26 +95,27 @@
         <div class="reg-block-header">
             <h2>Sign Up</h2>         
         </div>
+		<form action="" method="post" id="sky-form3" class="sky-form contact-style">
 
         <div class="input-group margin-bottom-20">
             <span class="input-group-addon"><i class="fa fa-envelope"></i></span>
-            <input type="text" class="form-control" placeholder="Name">
+            <input type="text"name ="name" class="form-control" placeholder="Name">
         </div>
         <div class="input-group margin-bottom-20">
             <span class="input-group-addon"><i class="fa fa-lock"></i></span>
-            <input type="text" class="form-control" placeholder="Phone Number">
+            <input type="text" name ="phone" class="form-control" placeholder="Phone Number">
         </div>
         <div class="input-group margin-bottom-20">
             <span class="input-group-addon"><i class="fa fa-envelope"></i></span>
-            <input type="Email" class="form-control" placeholder="Email">
+            <input type="Email" name ="email" class="form-control" placeholder="Email">
         </div>
         <div class="input-group margin-bottom-20">
             <span class="input-group-addon"><i class="fa fa-lock"></i></span>
-            <input type="password" class="form-control" placeholder="password">
+            <input type="password" name ="password" class="form-control" placeholder="password">
         </div>
         <div class="input-group margin-bottom-20">
             <span class="input-group-addon"><i class="fa fa-lock"></i></span>
-            <input type="password" class="form-control" placeholder="confirm password">
+            <input type="password"  class="form-control" placeholder="confirm password">
         </div>
         <hr>              
         <div class="row">
@@ -122,6 +123,31 @@
                 <button type="submit" class="btn-u btn-block">Sign Up</button>
             </div>
         </div>
+		<?php
+			if (isset($_POST["login_submit"])) {
+
+				$name= $_POST["name"];
+				$email= $_POST["email"];
+				$password_1= $_POST["password"];
+
+
+				$servername = "localhost";
+				$username = "root";
+				$password = "";
+				$database = "rhok";
+				$conn = mysqli_connect($servername, $username, $password, $database);
+				$sql = "INSERT INTO user VALUES('$name','$email','$password','0')";
+
+
+				$result = mysqli_query($conn, $sql);
+
+				
+				
+
+			}
+
+		?>
+		</form>
     </div>
     <!--End Reg Block-->
 </div><!--/container-->
@@ -148,8 +174,7 @@
 </script>
 <script type="text/javascript">
     $.backstretch([
-      "assets/img/bg/19.jpg",
-      "assets/img/bg/18.jpg",
+      "assets/img/bgar/garbage.jpg"
       ], {
         fade: 1000,
         duration: 7000
